--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,26 +27,25 @@ a {
 
 
 
-.container {
+#container {
     max-width: 1000px;
-    margin: 1rem auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    margin: auto;
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
 }
 
 
-
-
-
 .productContainer,
 .userContainer {
-    width: 300px;
     box-shadow: 2px 5px 15px 0px rgba(0,0,0,0.20);
     border-radius: 8px;
     overflow: hidden;
     background-color: #ffffff;    
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
 }
 /* .productImg {
     margin-bottom: 14px;
