--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,19 +35,19 @@ a {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
 }
-/* .container1 {
+.container1 {
     max-width: 1000px;
     margin: auto;
     padding: 1rem;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
-} */
+}
 
 
 .productContainer,
 .userContainer {
-    box-shadow: 2px 5px 15px 0px rgba(0,0,0,0.20);
+    box-shadow: 0px 5px 16px 0px rgba(0,0,0,0.3);
     border-radius: 8px;
     overflow: hidden;
     background-color: #ffffff;    
